--- a/flower.html
+++ b/flower.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="https://fiqtor.github.io/flowers-for-someone/images/gift.png/gift.png" type="image/x-icon">
-  <link rel="stylesheet" href="flowers.css">
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FLOWERS FOR YOU</title>
 
-  
-  <title>FLOWERS NA KAY MANGO KA</title>
+  <!-- IMPORTANT: use flower.css, not style.css -->
+  <link rel="stylesheet" href="flower.css" />
 </head>
 
 <body class="not-loaded">
+  ...
+  <!-- IMPORTANT: use flower.js, not script.js -->
+  <script src="flower.js"></script>
+</body>
+
  
   <div class="night"></div>
 
@@ -322,3 +326,4 @@
 
 <!-- Import Javascript -->
 <script src="flower.js"></script>
+
